fix post author

--- a/_posts/2021-03-31-gene-first-post.html
+++ b/_posts/2021-03-31-gene-first-post.html
@@ -2,6 +2,7 @@
 layout: post
 title: "What's so interesting about blockchain, anyway?"
 date: 2021-03-31 12:00:00
+author: Ajin Gene
 
 ---
 <p>Hi all.
