--- a/_posts/2021-03-31-gene-first-post.html
+++ b/_posts/2021-03-31-gene-first-post.html
@@ -36,7 +36,7 @@ I like being a participant of that kind of system.
 </p>
 
 <p>
-<b>Being on the forefront of tech progress</b>
+<b>Being on the forefront of tech progress</b>.
 Several times I've heard the statement that "blockchain today is what the Internet was in the 90s".
 And I wonder just what kind of future people see for blockchain 30 years from now when they say this.
 At best, I can only see a little part of this picture right now.
