author name fix

--- a/_posts/2021-03-31-gene-first-post.html
+++ b/_posts/2021-03-31-gene-first-post.html
@@ -2,7 +2,7 @@
 layout: post
 title: "What's so interesting about blockchain, anyway?"
 date: 2021-03-31 12:00:00
-author: Ajin Gene
+author: Gene A.
 
 ---
 <p>Hi all.
@@ -47,5 +47,3 @@ Exciting, no?
 Looking toward what comes, taking part in it as it grows, looking back on what it's become.
 Let's just see where we end up.
 </p>
-
-<p>Gene A.</p>
