--- a/_posts/2021-03-31-gene-first-post.html
+++ b/_posts/2021-03-31-gene-first-post.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "What's so interesting about blockchain, anyway?"
+subtitle: ""
 date: 2021-03-31 12:00:00
 author: Gene A.
 
